# aie3-twitter-customer-support

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  w3_twitter_data.ipynb
app/: config.py  features.py  llm.py  schemas.py
app/ml/: features.py  model.py  priority_classifier.joblib
app/prompts/: generate.py  predict_priority.py
app/rag/: retrieve.py
app/routers/: generate.py  health.py  predict_priority.py  query.py  retrieve.py
app/services/: llm.py  ml_model.py  retrieval.py
app/utils/: logger.py
data/: ARCHITECTURE_SPEC.md  PROMPT_DESIGN.md  api.md  filter_dataset.py  sample-pairs.csv  test_set.csv  twitter-data-columns.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnswerPanel.jsx  ComparisonTable.jsx  QueryInput.jsx  SourcePanel.jsx
scripts/: batch_priority_openai.py  embed_dataset.py  embed_dataset_st.py  eval_llm_predict.py  filter_dataset.py  sample_dataset.py  test_endpoints.py
