[project]
name = "3-twitter-customer-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.0",
    "google-generativeai>=0.8.6",
    "groq>=1.2.0",
    "joblib>=1.5.3",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.45.0",
    "vadersentiment>=3.3.2",
]
